--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "lvgl-qbs"]
 	path = source/lvgl-qbs
 	url = git@github.com:hrandib/lvgl-qbs.git
+[submodule "u8g2"]
+	path = source/u8g2
+	url = git@github.com:hrandib/u8g2.git
