Add basic support of monospace fonts in the glcd format

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "u8g2"]
 	path = source/u8g2
 	url = git@github.com:hrandib/u8g2.git
+[submodule "source/SSD1306Ascii"]
+	path = source/SSD1306Ascii
+	url = git@github.com:hrandib/SSD1306Ascii.git
