--- a/source/config/st_f401_mini.cfg
+++ b/source/config/st_f401_mini.cfg
@@ -9,6 +9,5 @@ transport select hla_swd
 
 source [find target/stm32f4x.cfg]
 
-reset_config none
-#connect_assert_srst
+reset_config connect_assert_srst
 adapter speed 24000
